force-app/main/default/objects/OrgUnitBundleMapping__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Org_Unit_Code__c</fullName>
        <defaultValue>&quot;50028343&quot;</defaultValue>
        <label>Org Unit Code</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Bundle__c</fullName>
        <description>External ID of the offer product bundle [BUNENG, BUNUNI, ...]</description>
        <inlineHelpText>External ID of the offer product bundle [BUNENG, BUNUNI, ...]</inlineHelpText>
        <label>Product Bundle</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <description>This field will be map to product family</description>
        <inlineHelpText>This field will be map to product family</inlineHelpText>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Course</fullName>
                    <default>true</default>
                    <label>Course</label>
                </value>
                <value>
                    <fullName>English Course</fullName>
                </value>
                <value>
                    <fullName>Diploma</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Options__c</fullName>
        <label>Product_Options</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Sub_Family__c</fullName>
        <label>Product Sub Family</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>1A</fullName>
                </value>
                <value>
                    <fullName>1AM</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>2A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Org Unit Bundle Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Org_Unit_Code__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Product_Bundle__c</columns>
        <columns>Product_Family__c</columns>
        <columns>Product_Sub_Family__c</columns>
        <columns>External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Org Unit Bundle Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Org Unit Bundle Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>